--- a/001.yaml
+++ b/001.yaml
@@ -1,34 +1,59 @@
-####################################
-# 创建者：v2rayse.com
-# 客户端：Clash
-# 创建时间：2023-03-08 00:16:01
-# 使用模版：V2RaySE 默认模版
-# 节点数量：221
-####################################
-mixed-port: 7890
+port: 7890
+mixed-port: 7893
+socks-port: 7891
 allow-lan: true
-log-level: info
+mode: rule
+log-level: silent
 external-controller: 0.0.0.0:9090
 dns:
-  enabled: true
+  enable: true
+  ipv6: true
+  listen: 0.0.0.0:7874
+  enhanced-mode: fake-ip
+  default-nameserver:
+  - 119.29.29.29
+  - 9.9.9.9
+  - 1.0.0.1
+  - 156.154.71.1
+  - 168.95.1.1
+  - 168.126.63.1
+  - 180.76.76.76
+  - 208.67.222.222
+  - 1.2.4.8
+  - 223.5.5.5
   nameserver:
-    - 119.29.29.29
-    - 223.5.5.5
+  - 114.114.114.114
+  - 119.29.29.29
+  - 9.9.9.9
+  - 223.5.5.5
+  - https://doh.pub/dns-query
+  - https://dns.alidns.com/dns-query
+  - https://dns.adguard.com/dns-query
+  - https://dns.cloudflare.com/dns-query
+  - tls://dns.google
+  - 8.8.4.4
+  - 156.154.71.1
+  - 168.95.1.1
+  - 168.126.63.1
+  - 180.76.76.76
+  - tcp://8.8.4.4
+  - tcp://1.1.1.2
+  - tcp://9.9.9.9
+  - tcp://119.29.29.29
+  - tcp://114.114.114.114
+  - tcp://156.154.71.1
+  - tcp://168.95.1.1
+  - tcp://168.126.63.1
+  - tcp://223.5.5.5
+  - tcp://180.76.76.76
   fallback:
-    - 8.8.8.8
-    - 8.8.4.4
-    - tls://1.0.0.1:853
-    - tls://dns.google:853
-
+  - https://dns.cloudflare.com/dns-query
+  - https://public.dns.iij.jp/dns-query
+  - https://jp.tiar.app/dns-query
+  - https://jp.tiarap.org/dns-query
+  - tls://dot.tiar.app
+  fake-ip-range: 198.18.0.1/16
 proxies:
-  - {"name":"YouTube梦歌|杭港BGP|Netflix_6","type":"trojan","server":"de.stablize.top","port":443,"udp":true,"password":"29aa9820-78aa-43de-a477-587747ce21a3","skip-cert-verify":true}
-  - {"name":"YouTube梦歌|杭港BGP|Netflix_7","type":"trojan","server":"dejs.stablize.top","port":443,"udp":true,"password":"29aa9820-78aa-43de-a477-587747ce21a3","sni":"dejs.stablize.top","skip-cert-verify":true}
-  - {"name":"YouTube梦歌|杭港BGP|Netflix_10","type":"trojan","server":"s-jp01.aikun.online","port":10000,"udp":true,"password":"c9c498df-683b-40b3-a1cb-b574c36f9433","sni":"s-jp01.aikun.online","skip-cert-verify":true}
-  - {"name":"YouTube梦歌|杭港BGP|Netflix_33","type":"trojan","server":"aws-hk01.aikun.online","port":7045,"udp":true,"password":"c9c498df-683b-40b3-a1cb-b574c36f9433","skip-cert-verify":true}
-  - {"name":"YouTube梦歌|杭港BGP|Netflix_99","type":"trojan","server":"aws-hk01.aikun.online","port":7045,"udp":true,"password":"c9c498df-683b-40b3-a1cb-b574c36f9433","sni":"aws-hk01.aikun.online","skip-cert-verify":true}
-  - {"name":"YouTube梦歌|杭港BGP|Netflix_100","type":"trojan","server":"us.disnet.gq","port":443,"udp":true,"password":"7c7e0edb-c45a-4c07-b66a-69b191179349","skip-cert-verify":true}
-  - {"name":"YouTube梦歌|杭港BGP|Netflix_130","type":"trojan","server":"seed.daffodil.engineer","port":34104,"udp":true,"password":"oFW8yaRFnz","skip-cert-verify":true}
-  - {"name":"YouTube梦歌|杭港BGP|Netflix_9","type":"ss","server":"ddns.kunlunlancloud.com","port":55544,"password":"62bad9b7-cfb2-4989-b0b9-6cc9de4bb5c3","cipher":"chacha20-ietf-poly1305"}
   - {"name":"「YouTube梦歌」加拿大-01","type":"vmess","server":"cf-lt.sharecentre.online","port":443,"cipher":"auto","uuid":"823c31da-701f-483d-b36e-896e5cf0987a","alterId":0,"tls":true,"skip-cert-verify":true,"servername":"ca-nnc.ilovescp.com","network":"ws","ws-opts":{"path":"/shirker","headers":{"host":"ca-nnc.ilovescp.com"}}}
   - {"name":"「YouTube梦歌」加拿大-02","type":"vmess","server":"cf-lt.sharecentre.online","port":443,"cipher":"auto","uuid":"823c31da-701f-483d-b36e-896e5cf0987a","alterId":0,"tls":true,"skip-cert-verify":true,"servername":"ca-nnc.ilovescp.com","network":"ws","ws-opts":{"path":"/shirker","headers":{"host":"ca-nnc.ilovescp.com"}}}
   - {"name":"「YouTube梦歌」加拿大-03","type":"vmess","server":"cf-lt.sharecentre.online","port":443,"cipher":"auto","uuid":"823c31da-701f-483d-b36e-896e5cf0987a","alterId":0,"tls":true,"skip-cert-verify":true,"servername":"ca-nnc.ilovescp.com","network":"ws","ws-opts":{"path":"/shirker","headers":{"host":"ca-nnc.ilovescp.com"}}}
@@ -248,14 +273,6 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - DIRECT
-      - YouTube梦歌|杭港BGP|Netflix_6
-      - YouTube梦歌|杭港BGP|Netflix_7
-      - YouTube梦歌|杭港BGP|Netflix_10
-      - YouTube梦歌|杭港BGP|Netflix_33
-      - YouTube梦歌|杭港BGP|Netflix_99
-      - YouTube梦歌|杭港BGP|Netflix_100
-      - YouTube梦歌|杭港BGP|Netflix_130
-      - YouTube梦歌|杭港BGP|Netflix_9
       - 「YouTube梦歌」加拿大-01
       - 「YouTube梦歌」加拿大-02
       - 「YouTube梦歌」加拿大-03
@@ -475,14 +492,6 @@ proxy-groups:
     interval: 300
     tolerance: 50
     proxies:
-      - YouTube梦歌|杭港BGP|Netflix_6
-      - YouTube梦歌|杭港BGP|Netflix_7
-      - YouTube梦歌|杭港BGP|Netflix_10
-      - YouTube梦歌|杭港BGP|Netflix_33
-      - YouTube梦歌|杭港BGP|Netflix_99
-      - YouTube梦歌|杭港BGP|Netflix_100
-      - YouTube梦歌|杭港BGP|Netflix_130
-      - YouTube梦歌|杭港BGP|Netflix_9
       - 「YouTube梦歌」加拿大-01
       - 「YouTube梦歌」加拿大-02
       - 「YouTube梦歌」加拿大-03
@@ -702,14 +711,6 @@ proxy-groups:
       - 🚀 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - YouTube梦歌|杭港BGP|Netflix_6
-      - YouTube梦歌|杭港BGP|Netflix_7
-      - YouTube梦歌|杭港BGP|Netflix_10
-      - YouTube梦歌|杭港BGP|Netflix_33
-      - YouTube梦歌|杭港BGP|Netflix_99
-      - YouTube梦歌|杭港BGP|Netflix_100
-      - YouTube梦歌|杭港BGP|Netflix_130
-      - YouTube梦歌|杭港BGP|Netflix_9
       - 「YouTube梦歌」加拿大-01
       - 「YouTube梦歌」加拿大-02
       - 「YouTube梦歌」加拿大-03
@@ -928,14 +929,6 @@ proxy-groups:
     proxies:
       - 🚀 节点选择
       - 🎯 全球直连
-      - YouTube梦歌|杭港BGP|Netflix_6
-      - YouTube梦歌|杭港BGP|Netflix_7
-      - YouTube梦歌|杭港BGP|Netflix_10
-      - YouTube梦歌|杭港BGP|Netflix_33
-      - YouTube梦歌|杭港BGP|Netflix_99
-      - YouTube梦歌|杭港BGP|Netflix_100
-      - YouTube梦歌|杭港BGP|Netflix_130
-      - YouTube梦歌|杭港BGP|Netflix_9
       - 「YouTube梦歌」加拿大-01
       - 「YouTube梦歌」加拿大-02
       - 「YouTube梦歌」加拿大-03
@@ -1154,14 +1147,6 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🚀 节点选择
-      - YouTube梦歌|杭港BGP|Netflix_6
-      - YouTube梦歌|杭港BGP|Netflix_7
-      - YouTube梦歌|杭港BGP|Netflix_10
-      - YouTube梦歌|杭港BGP|Netflix_33
-      - YouTube梦歌|杭港BGP|Netflix_99
-      - YouTube梦歌|杭港BGP|Netflix_100
-      - YouTube梦歌|杭港BGP|Netflix_130
-      - YouTube梦歌|杭港BGP|Netflix_9
       - 「YouTube梦歌」加拿大-01
       - 「YouTube梦歌」加拿大-02
       - 「YouTube梦歌」加拿大-03
@@ -1380,14 +1365,6 @@ proxy-groups:
     proxies:
       - 🚀 节点选择
       - 🎯 全球直连
-      - YouTube梦歌|杭港BGP|Netflix_6
-      - YouTube梦歌|杭港BGP|Netflix_7
-      - YouTube梦歌|杭港BGP|Netflix_10
-      - YouTube梦歌|杭港BGP|Netflix_33
-      - YouTube梦歌|杭港BGP|Netflix_99
-      - YouTube梦歌|杭港BGP|Netflix_100
-      - YouTube梦歌|杭港BGP|Netflix_130
-      - YouTube梦歌|杭港BGP|Netflix_9
       - 「YouTube梦歌」加拿大-01
       - 「YouTube梦歌」加拿大-02
       - 「YouTube梦歌」加拿大-03
@@ -1623,14 +1600,6 @@ proxy-groups:
       - 🚀 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - YouTube梦歌|杭港BGP|Netflix_6
-      - YouTube梦歌|杭港BGP|Netflix_7
-      - YouTube梦歌|杭港BGP|Netflix_10
-      - YouTube梦歌|杭港BGP|Netflix_33
-      - YouTube梦歌|杭港BGP|Netflix_99
-      - YouTube梦歌|杭港BGP|Netflix_100
-      - YouTube梦歌|杭港BGP|Netflix_130
-      - YouTube梦歌|杭港BGP|Netflix_9
       - 「YouTube梦歌」加拿大-01
       - 「YouTube梦歌」加拿大-02
       - 「YouTube梦歌」加拿大-03
